--- a/simbolos.css
+++ b/simbolos.css
@@ -83,7 +83,7 @@
 .menu-content-row{
     margin-top: 4rem;
     width: 60rem;
-    padding: 3rem 0;
+    padding: 3rem 2rem;
     font-size: 1.4rem;
     text-align: center;
 }
@@ -296,3 +296,4 @@
     -5px  0   0 var(--dirt-brown);
     margin: 0;
 }
+
