--- a/global.css
+++ b/global.css
@@ -177,6 +177,7 @@ body::-webkit-scrollbar-thumb {
     list-style: none;
     font-family: "Passero One";
     font-size: 1.8rem;
+    text-align: center;
 }
 
 .nav-item a {
@@ -218,6 +219,7 @@ body::-webkit-scrollbar-thumb {
     color: var(--pure-white);
     list-style: none;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .footer-items li {
@@ -511,8 +513,8 @@ body::-webkit-scrollbar-thumb {
     .footer-items {
         flex-direction: column;
         align-items: center;
-    }
-
+        }
+        
     .footer-items li {
         margin-bottom: 1rem;
     }
