--- a/home.css
+++ b/home.css
@@ -428,8 +428,8 @@
     width: 100%;
     max-width: 100rem;
     height: auto;
-    margin-top: 4rem;
-    padding: 1rem 4rem;
+    margin: 4rem 0 0 0 !important;
+    padding: 1rem 0;    
     border-radius: 50px;
     display: flex;
     flex-direction: column;
